--- a/index.html
+++ b/index.html
@@ -22,56 +22,61 @@
         id="container"
         class="bg-[url('/images/pattern-bg.png')] w-full h-[250px] bg-no-repeat bg-cover flex flex-col items-center p-6"
       >
-        <h1 class="text-white text-[30px] font-[500] m-3">
+        <h1 class="text-white text-[30px] font-[500]">
           IP Address Tracker
         </h1>
-        <div
+        <form
+          id="input-ip"
           class="relative bg-white m-3 h-[50px] rounded-xl flex overflow-hidden w-[500px] xs:w-full"
         >
           <input
+            id="ip"
+            name="ip"
             placeholder="Search for any IP address or domain"
             class="flex-1 border outline-0 p-5 text-[16px] text-Very-Dark-Gray"
           />
-          <div
+          <button
             class="bg-[#000] flex justify-center items-center cursor-pointer w-[50px]"
+            type="submit"
           >
             <img src="/images/icon-arrow.svg" alt="arrow" />
-          </div>
-        </div>
+          </button>
+        </form>
       </div>
 
       <div class="w-full flex-1 relative">
-        <div class="p-6 absolute top-[-70px] z-20 w-full">
+        <div class="p-6 absolute top-[-120px] z-20 w-full">
           <div
             class="w-10/12 xs:w-full bg-white drop-shadow-2xl mx-auto xs:max-w-full px-5 py-7 rounded-lg grid grid-cols-4 xs:grid-cols-1 sm:divide-x xs:text-center"
           >
-            <div class="xs:mb-4">
-              <h2 class="text-xs text-Dark-Gray mb-3 xs:mb-1 font-medium">
+            <div class="xs:mb-4 overflow-hidden">
+              <h2
+                class="text-xs text-Dark-Gray mb-3 xs:mb-1 font-medium"
+              >
                 IP ADDRESS
               </h2>
-              <p class="font-medium text-2xl">192.212.174.101</p>
+              <p id="ip-address" class="font-medium text-2xl">....</p>
+            </div>
+            <div class="pl-5 xs:mb-4 overflow-hidden">
+              <h2 class="text-xs text-Dark-Gray mb-3 xs:mb-1 font-medium">
+                LOCATION
+              </h2>
+              <p id="location" class="font-medium text-2xl">....</p>
             </div>
             <div class="pl-5 xs:mb-4">
               <h2 class="text-xs text-Dark-Gray mb-3 xs:mb-1 font-medium">
-                IP ADDRESS
+                TIMEZONE
               </h2>
-              <p class="font-medium text-2xl">192.212.174.101</p>
+              <p id="timezone" class="font-medium text-2xl">....</p>
             </div>
             <div class="pl-5 xs:mb-4">
               <h2 class="text-xs text-Dark-Gray mb-3 xs:mb-1 font-medium">
-                IP ADDRESS
+                iSP
               </h2>
-              <p class="font-medium text-2xl">192.212.174.101</p>
-            </div>
-            <div class="pl-5 xs:mb-4">
-              <h2 class="text-xs text-Dark-Gray mb-3 xs:mb-1 font-medium">
-                IP ADDRESS
-              </h2>
-              <p class="font-medium text-2xl">192.212.174.101</p>
+              <p id="isp" class="font-medium text-2xl">....</p>
             </div>
           </div>
         </div>
-
         <div id="map" class="w-full bg-red-900 h-full z-10"></div>
       </div>
     </main>
